[package]
name = "r68k"
description = "Motorola 68000 CPU emulator, ported from the battle-tested Musashi emulator"
version = "0.2.0"
edition = "2021"
authors = ["Martin Hellspong <martin.hellspong@factor10.com>"]
license = "MIT"
repository = "https://github.com/marhel/r68k"
keywords = ["m68k", "68000", "emulator", "motorola", "retro"]
categories = ["emulators", "simulation"]
readme = "README.md"
documentation = "https://docs.rs/r68k"

[features]
musashi = []

[dev-dependencies]
itertools = "0.13"
libc = "0.2"
quickcheck = "1.0"
rand = "0.8"
lazy_static = "1.5"
